Fix notify prometheus

--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -21,6 +21,7 @@
   loop:
     - prometheus
     - promtool
+  notify: "Restart prometheus"
 
 - name: "Make needs directories"
   ansible.builtin.file:
