--- a/inventory.yml
+++ b/inventory.yml
@@ -4,6 +4,7 @@ all:
       hosts:
         localhost:
           ansible_connection: local
+        # master ansible_ssh_host=192.168.1.2
     nodes:
       hosts:
         localhost:
