--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
-inventory=inventory.yml
+inventory=inventory/inventory.ini
 ansible_python_interpreter=/usr/bin/python3
+roles_path=./roles
