--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -38,22 +38,17 @@
     - path: "/etc/sysconfig"
       user: "root"
 
-- name: "Copy configuration file"
-  ansible.builtin.copy:
-    src: "/tmp/prometheus-{{ prometheus_version }}.linux-{{ prometheus_architecture }}/prometheus.yml"
-    dest: "{{ prometheus_config_path }}"
-    owner: "{{ prometheus_user }}"
-    group: "{{ prometheus_user }}"
-    mode: "0644"
-  notify: "Restart prometheus"
-
-- name: "Create service Prometheus"
+- name: "Create config and service Prometheus"
   ansible.builtin.template:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
     owner: "{{ item.user }}"
     group: "{{ item.user }}"
+    mode: "0644"
   loop:
+    - src: "prometheus.yml.j2"
+      dest: "{{ prometheus_config_path }}"
+      user: "{{ prometheus_user }}"
     - src: "sysconfig.j2"
       dest: "/etc/sysconfig/prometheus"
       user: "{{ prometheus_user }}"
