--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -38,6 +38,16 @@
     - path: "/etc/sysconfig"
       user: "root"
 
+- name: "Make config file"
+  ansible.builtin.template:
+    src: "prometheus.yml.j2"
+    dest: "{{ prometheus_config_path }}"
+    owner: "{{ prometheus_user }}"
+    group: "{{ prometheus_user }}"
+    mode: "0644"
+  notify: "Restart prometheus"
+  tags: [node_exporter]
+
 - name: "Create config and service Prometheus"
   ansible.builtin.template:
     src: "{{ item.src }}"
@@ -46,9 +56,6 @@
     group: "{{ item.user }}"
     mode: "0644"
   loop:
-    - src: "prometheus.yml.j2"
-      dest: "{{ prometheus_config_path }}"
-      user: "{{ prometheus_user }}"
     - src: "sysconfig.j2"
       dest: "/etc/sysconfig/prometheus"
       user: "{{ prometheus_user }}"
