--- a/playbooks/node_exporter.yml
+++ b/playbooks/node_exporter.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Install Node Exporter"
+- name: "Node Exporter"
   hosts: "node_exporters"
   become: true
   roles: [ role: node_exporter ]
