--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -38,7 +38,7 @@
     - path: "/etc/sysconfig"
       user: "root"
 
-- name: "Make config file"
+- name: "Generate config file"
   ansible.builtin.template:
     src: "prometheus.yml.j2"
     dest: "{{ prometheus_config_path }}"
