--- a/inventory/inventory.ini.sample
+++ b/inventory/inventory.ini.sample
@@ -1,7 +1,8 @@
-# master ansible_ssh_host=192.168.0.2 ip=10.0.0.2
-# node-1 ansible_ssh_host=192.168.0.3 ip=10.0.0.3
-# node-2 ansible_ssh_host=192.168.0.4 ip=10.0.0.4
-# node-3 ansible_ssh_host=192.168.0.5 ip=10.0.0.5
+# master  ansible_ssh_host=192.168.0.2 ip=10.0.0.2
+# node-1  ansible_ssh_host=192.168.0.3 ip=10.0.0.3
+# node-2  ansible_ssh_host=192.168.0.4 ip=10.0.0.4
+# node-3  ansible_ssh_host=192.168.0.5 ip=10.0.0.5
+# efk     ansible_ssh_host=192.168.0.6 ip=10.0.0.6
 
 [prometheuses]
 # master
@@ -10,3 +11,6 @@
 # node-1
 # node-2
 # node-3
+
+[elastic]
+# efk
