--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -24,3 +24,15 @@ node_exporter_architecture: "amd64"
 
 # Параметры запуска
 node_exporter_options: ""
+
+###########################
+#   ElasticSearch varibles
+###########################
+
+# Пути к артефактам (архивам) на локальном хосте, т.к. репозитории закрыты в РФ
+# Необходимо их скачать: 
+#  - https://www.elastic.co/downloads/elasticsearch
+#  - https://www.elastic.co/downloads/kibana
+# разместить на хосте и указать путь к ним (абсолютный или относительный):
+elastic_source_file: "elasticsearch-8.8.0-linux-x86_64.tar.gz"
+kibana_source_file: "kibana-8.8.0-linux-x86_64.tar.gz"
