--- a/roles/elastic/defaults/main.yml
+++ b/roles/elastic/defaults/main.yml
@@ -1,1 +1,8 @@
 ---
+# Пути к артефактам (архивам) на локальном хосте, т.к. репозитории закрыты в РФ
+# Необходимо их скачать: 
+#  - https://www.elastic.co/downloads/elasticsearch
+#  - https://www.elastic.co/downloads/kibana
+# разместить на хосте и указать путь к ним (абсолютный или относительный):
+elastic_source_file: "elasticsearch-8.8.0-linux-x86_64.tar.gz"
+kibana_source_file: "kibana-8.8.0-linux-x86_64.tar.gz"
