--- a/roles/fluentbit/tasks/main.yml
+++ b/roles/fluentbit/tasks/main.yml
@@ -15,3 +15,6 @@
     group: "root"
     mode: "0644"
   notify: "Restart fluent-bit"
+
+- name: "Restart Fluent-Bit"
+  ansible.builtin.meta: flush_handlers
